unpackaged/main/default/objects/fferpcore__FeatureConsoleActivation__c/fferpcore__FeatureConsoleActivation__c.object-meta.xml
<CustomObject>
    <description>Stores the current activation details for features and feature steps.</description>
    <label>Feature Console Activation</label>
    <nameField>
        <displayFormat>FCA-{0000}</displayFormat>
        <label>Feature Console Activation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Console Activations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>