unpackaged/main/default/objects/fferpcore__FeatureConsoleActivation__c/fields/fferpcore__ActivationNumber__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ActivationNumber__c</fullName>
    <description>Number that identifies the related feature enablement logs.</description>
    <inlineHelpText>Number that identifies the related feature enablement logs.</inlineHelpText>
    <label>Activation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>