unpackaged/main/default/objects/fferpcore__FeatureConsoleActivation__c/fields/fferpcore__Memento__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Memento__c</fullName>
    <description>Data that can be used when reverting or performing the feature step, such as previous state values or user selections. For example, previous state values can be restored when the feature step is reverted.</description>
    <inlineHelpText>Data that can be used when reverting or performing the feature step, such as previous state values or user selections. For example, previous state values can be restored when the feature step is reverted.</inlineHelpText>
    <label>State</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>