unpackaged/main/default/objects/fferpcore__FeatureConsoleActivation__c/fields/fferpcore__Status__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Status__c</fullName>
    <description>Status of the operation, such as Success or Error.</description>
    <inlineHelpText>Status of the operation, such as Success or Error.</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>