unpackaged/main/default/objects/fferpcore__FeatureConsoleActivation__c/fields/fferpcore__TargetId__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TargetId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier for the feature or feature step.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the feature or feature step.</inlineHelpText>
    <label>Target Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>